# DualSenseTUI

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: ATTRIBUTIONS.md  RELEASE.md  TESTING.md
macos/DualSenseApp/Sources/DualSenseApp/: ContentView.swift  CoreService.swift  DualSenseApp.swift  Models.swift
native/: audio_capture.m
resources/macos/: DualSenseTUI-GUI-Info.plist  DualSenseTUI.icns  Info.plist
scripts/: build-macos-app.sh  build-universal-macos-app.sh  cargo-runner.sh  generate-macos-icon.sh  generate-macos-icon.swift  make-app-bundle.sh  make-macos-app.sh  package-macos-dmg.sh  package-release.sh  run-macos-app.sh
src/: app.rs  audio_capture.rs  audio_reactive.rs  config.rs  launch_agent.rs  main.rs  mapping.rs  model.rs  ui.rs
src/app/: gui_service.rs
src/dualsense/: effects.rs  macos_iokit.rs  mod.rs  stub.rs
