[package]
name = "dualsense-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Terminal DualSense configurator for macOS"
publish = false

[[bin]]
name = "DualSenseTUI"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
